<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/characterImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_background" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="14dp"
                    android:gravity="center|start"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:gravity="start|center"
                    android:paddingStart="50dp"
                    android:paddingEnd="10dp"
                    android:text="TextView"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="@+id/textView2"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/school"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/school"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:gravity="start|center"
                    android:paddingStart="45dp"
                    android:paddingEnd="10dp"
                    android:text="TextView"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.552"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/textView6"
                    app:layout_constraintVertical_bias="1.0" />


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/background"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/background"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|bottom"
                    android:maxLines="100"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="Your long text goes here..."
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView8"
                    app:layout_constraintTop_toTopOf="@+id/textView8"
                    app:layout_constraintVertical_bias="0" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/hobbies"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/background" />

                <TextView
                    android:id="@+id/studentHobbies"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|bottom"
                    android:maxLines="100"
                    android:paddingStart="35dp"
                    android:paddingEnd="10dp"
                    android:text="@string/your_long_text_goes_here"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView9"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textView9"
                    app:layout_constraintTop_toTopOf="@+id/textView9"
                    app:layout_constraintVertical_bias="0"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/age"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/studentHobbies" />

                <TextView
                    android:id="@+id/studentAge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|bottom"
                    android:maxLines="10"
                    android:paddingStart="60dp"
                    android:paddingEnd="10dp"
                    android:text="@string/your_long_text_goes_here"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView10"
                    app:layout_constraintTop_toTopOf="@+id/textView10"
                    app:layout_constraintVertical_bias="0.428" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/height"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/studentAge" />

                <TextView
                    android:id="@+id/studentHeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|bottom"
                    android:maxLines="100"
                    android:paddingStart="40dp"
                    android:paddingEnd="10dp"
                    android:text="@string/your_long_text_goes_here"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView11"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView11"
                    app:layout_constraintTop_toTopOf="@+id/textView11"
                    app:layout_constraintVertical_bias="0.428" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/weapon"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/studentHeight" />

                <TextView
                    android:id="@+id/studentWeapon"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|bottom"
                    android:maxLines="100"
                    android:paddingStart="34dp"
                    android:paddingEnd="10dp"
                    android:text="@string/your_long_text_goes_here"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView12"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView12"
                    app:layout_constraintTop_toTopOf="@+id/textView12"
                    app:layout_constraintVertical_bias="0.428" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/damage"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/studentWeapon" />

                <TextView
                    android:id="@+id/studentDamage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|bottom"
                    android:maxLines="100"
                    android:paddingStart="34dp"
                    android:paddingEnd="10dp"
                    android:text="@string/your_long_text_goes_here"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView13"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView13"
                    app:layout_constraintTop_toTopOf="@+id/textView13"
                    app:layout_constraintVertical_bias="0.428" />


                <TextView
                    android:id="@+id/originalNames"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|bottom"
                    android:maxLines="100"
                    android:paddingStart="34dp"
                    android:paddingEnd="10dp"
                    android:text="@string/your_long_text_goes_here"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView15"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView15"
                    app:layout_constraintTop_toTopOf="@+id/textView15"
                    app:layout_constraintVertical_bias="0.428" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginTop="32dp"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/names"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/studentDamage"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>